# condatest

./: CMakeLists.txt  lib.cpp  main.cpp
recipe/: build.sh  meta.yaml
